core/codegen/tests/ui-fail-nightly/responder-types.stderr
error[E0277]: the trait bound `u8: rocket::response::Responder<'_, '_>` is not satisfied
 --> $DIR/responder-types.rs:5:5
  |
5 |     thing: u8,
  |     ^^^^^^^^^ the trait `rocket::response::Responder<'_, '_>` is not implemented for `u8`
  |
  = note: required by `rocket::response::Responder::respond_to`

error[E0277]: the trait bound `rocket::http::Header<'_>: std::convert::From<u8>` is not satisfied
  --> $DIR/responder-types.rs:11:5
   |
11 |     other: u8,
   |     ^^^^^^^^^ the trait `std::convert::From<u8>` is not implemented for `rocket::http::Header<'_>`
   |
   = help: the following implementations were found:
             <rocket::http::Header<'static> as std::convert::From<&rocket::http::Cookie<'_>>>
             <rocket::http::Header<'static> as std::convert::From<rocket::http::Cookie<'_>>>
   = note: required because of the requirements on the impl of `std::convert::Into<rocket::http::Header<'_>>` for `u8`

error[E0277]: the trait bound `u8: rocket::response::Responder<'_, '_>` is not satisfied
  --> $DIR/responder-types.rs:16:5
   |
16 |     thing: u8,
   |     ^^^^^^^^^ the trait `rocket::response::Responder<'_, '_>` is not implemented for `u8`
   |
   = note: required by `rocket::response::Responder::respond_to`

error[E0277]: the trait bound `rocket::http::Header<'_>: std::convert::From<u8>` is not satisfied
  --> $DIR/responder-types.rs:17:5
   |
17 |     other: u8,
   |     ^^^^^^^^^ the trait `std::convert::From<u8>` is not implemented for `rocket::http::Header<'_>`
   |
   = help: the following implementations were found:
             <rocket::http::Header<'static> as std::convert::From<&rocket::http::Cookie<'_>>>
             <rocket::http::Header<'static> as std::convert::From<rocket::http::Cookie<'_>>>
   = note: required because of the requirements on the impl of `std::convert::Into<rocket::http::Header<'_>>` for `u8`

error[E0277]: the trait bound `rocket::http::Header<'_>: std::convert::From<std::string::String>` is not satisfied
  --> $DIR/responder-types.rs:24:5
   |
24 |     then: String,
   |     ^^^^^^^^^^^^ the trait `std::convert::From<std::string::String>` is not implemented for `rocket::http::Header<'_>`
   |
   = help: the following implementations were found:
             <rocket::http::Header<'static> as std::convert::From<&rocket::http::Cookie<'_>>>
             <rocket::http::Header<'static> as std::convert::From<rocket::http::Cookie<'_>>>
   = note: required because of the requirements on the impl of `std::convert::Into<rocket::http::Header<'_>>` for `std::string::String`

error[E0277]: the trait bound `usize: rocket::response::Responder<'_, '_>` is not satisfied
  --> $DIR/responder-types.rs:28:13
   |
28 | fn foo() -> usize { 0 }
   |             ^^^^^ the trait `rocket::response::Responder<'_, '_>` is not implemented for `usize`
   |
   = note: required by `rocket::handler::<impl rocket::outcome::Outcome<rocket::Response<'o>, rocket::http::Status, rocket::Data>>::from`
